--- a/styles.css
+++ b/styles.css
@@ -29,12 +29,16 @@ p {
   font-size: 1.4rem;
   margin-top: 5px;
   line-height: 2.5rem;
-  font-weight: 300;
+  font-weight: 600;
   letter-spacing: 0.05rem;
-  
+}
+
+.project-item a {
+  margin-top: 20px;
+  color: #ff6b6b;
+  font-weight: 800;
 }
 .section-title {
-  
   font-size: 4rem;
   font-weight: 800;
   color: #333;
@@ -45,9 +49,8 @@ p {
   letter-spacing: -0.02em;
 }
 
-.section-title:hover{
-    letter-spacing: 0.3em;
-
+.section-title:hover {
+  letter-spacing: 0.3em;
 }
 .section-title span {
   font-weight: 800;
@@ -301,7 +304,7 @@ p {
   flex-direction: column;
   padding: 30px;
   border-radius: 10px;
-  background-image: url(./img/img-1.png);
+  background-image: url("https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?auto=format&fit=crop&q=80&w=2670&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-size: cover;
   margin: 10px 5%;
   position: relative;
@@ -370,7 +373,7 @@ p {
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
-  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+  background-color: rgb(26, 31, 40);
   color: white;
 }
 #projects .project-info h1 {
@@ -456,51 +459,6 @@ p {
   z-index: -1;
 }
 /* End About Section */
-
-/* contact Section */
-#contact .contact {
-  flex-direction: column;
-  max-width: 1200px;
-  margin: 0 auto;
-  width: 90%;
-}
-#contact .contact-items {
-  /* max-width: 400px; */
-  width: 100%;
-}
-#contact .contact-item {
-  width: 80%;
-  padding: 20px;
-  text-align: center;
-  border-radius: 10px;
-  padding: 30px;
-  margin: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  box-shadow: 0px 0px 18px 0 #0000002c;
-  transition: 0.3s ease box-shadow;
-}
-#contact .contact-item:hover {
-  box-shadow: 0px 0px 5px 0 #0000002c;
-}
-#contact .icon {
-  width: 70px;
-  margin: 0 auto;
-  margin-bottom: 10px;
-}
-#contact .contact-info h1 {
-  font-size: 2.5rem;
-  font-weight: 500;
-  margin-bottom: 5px;
-}
-#contact .contact-info h2 {
-  font-size: 1.3rem;
-  line-height: 2rem;
-  font-weight: 500;
-}
-/*End contact Section */
 
 /* Footer */
 #footer {
